.metadata/.plugins/org.eclipse.cdt.ui/Lab3.build.log
02:01:43 **** Incremental Build of configuration Debug for project Lab3 ****
make all 
Building file: ../Sources/main.c
Invoking: Cross ARM C Compiler
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections  -g3 -I"../Sources" -I"../Includes" -std=c99 -MMD -MP -MF"Sources/main.d" -MT"Sources/main.o" -c -o "Sources/main.o" "../Sources/main.c"
../Sources/main.c: In function 'spin':
../Sources/main.c:41:5: warning: type of 'i' defaults to 'int' [enabled by default]
 int spin(i,j,k){
     ^
../Sources/main.c:41:5: warning: type of 'j' defaults to 'int' [enabled by default]
../Sources/main.c:41:5: warning: type of 'k' defaults to 'int' [enabled by default]
../Sources/main.c: In function 'main':
../Sources/main.c:72:2: error: 'SIM_SCGC5' undeclared (first use in this function)
  SIM_SCGC5 |= 0x3e000;
  ^
../Sources/main.c:72:2: note: each undeclared identifier is reported only once for each function it appears in
../Sources/main.c:78:2: error: 'PORTC_PCR3' undeclared (first use in this function)
  PORTC_PCR3 = 0x100; //red
  ^
../Sources/main.c:79:2: error: 'PORTD_PCR4' undeclared (first use in this function)
  PORTD_PCR4 = 0x100; //green
  ^
../Sources/main.c:80:2: error: 'PORTA_PCR2' undeclared (first use in this function)
  PORTA_PCR2 = 0x100; //blue
  ^
../Sources/main.c:83:2: error: 'GPIOC_PDDR' undeclared (first use in this function)
  GPIOC_PDDR = (1 << 3);
  ^
../Sources/main.c:84:2: error: 'GPIOD_PDDR' undeclared (first use in this function)
  GPIOD_PDDR = (1 << 4);
  ^
../Sources/main.c:85:2: error: 'GPIOA_PDDR' undeclared (first use in this function)
  GPIOA_PDDR = (1 << 2);
  ^
../Sources/main.c:91:2: warning: implicit declaration of function 'set_LED' [-Wimplicit-function-declaration]
  set_LED(i,j,k){
  ^
../Sources/main.c:91:16: error: expected ';' before '{' token
  set_LED(i,j,k){
                ^
Sources/subdir.mk:18: recipe for target 'Sources/main.o' failed
make: *** [Sources/main.o] Error 1

02:01:43 Build Finished (took 290ms)

